service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: todo
